Fix rental form sizes on smaller screens

--- a/front-end/src/Forms.css
+++ b/front-end/src/Forms.css
@@ -54,6 +54,10 @@ input[type="number"] {
     display: block;
 }
 
+.scroll-form {
+    overflow: auto;
+}
+
 .simple-form {
     border: none;
     font-size: 1.25em;
